--- a/ex2/public/style.css
+++ b/ex2/public/style.css
@@ -1,12 +1,81 @@
-@import url("fonts/stylesheet.css");
-
-* {
-    margin: 0;
-    padding: 0;
-    font-size: 14px;
+@font-face {
     font-family: 'Graphik';
-    font-weight: normal;
-    font-style: normal;
+    src:url('fonts/Graphik-Medium-Cy-Web.woff2') format('woff2'),
+        url('fonts/Graphik-Medium-Cy-Web.woff') format('woff');
+}
+
+html {
+    position: relative;
+    min-height: 100%;
+    font-family: 'Graphik';
+}
+  
+body {
+    margin-bottom: 60px;
+}
+
+.nav-bar__item {
+    display: inline;
+    /* text-align: center; */
+}
+
+.nav-link {
+    display: inline-block;
+    /* width: 25%; */
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.one {
+    margin-right: 35px;
+}
+
+.nav-link:hover {
+    color: #FFFFFF;
+} 
+
+.page_about_one{
+    margin-right: 35px;
+}
+
+.page_contact_one{
+    margin-right: 35px;
+}
+
+.page_contact_one:hover ~ hr {
+    width: 36%;
+    margin-left: 0;
+}
+  
+.page_about_two:hover ~ hr {
+    margin-left: 52%;
+    width: 43%;
+}
+  
+.page_about {
+    height: .25rem;
+    margin-left: 0;
+    margin-top: 0;
+    width: 36%;
+    background: #FFFFFF;
+    border: none;
+    transition: .3s ease-in-out;
+    margin-bottom: 0;
+}
+
+.page_contact {
+    height: .25rem;
+    margin-left: 52%;
+    margin-top: 0;
+    width: 43%;
+    background: #FFFFFF;
+    border: none;
+    transition: .3s ease-in-out;
+    margin-bottom: 0;
 }
 
 .centered {
@@ -17,11 +86,15 @@
 
 .header-bar {
     background-color: #293883;
+    font-family: 'Graphik';
+    font-weight: normal;
+    font-style: normal;
 }
 
 .logo {
-    height: 55px;
-    width: 130px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -30,27 +103,27 @@
     height: 55px;
     width: 53px;
     margin-right: 8px;
-    float: left;
 }
 
 .logo__text {
-    float: left;
     color: #7184E8;
     font-weight: bold;
 }
 
 .navigation-panel {
-    display: table;
-	margin: 0 auto;
+    /* display: table;
+    margin: 0 auto; */
+    margin-top: 41px;
+    margin-bottom: 39px;
 }
-.nav-bar {
+/* .nav-bar {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
     list-style: none;
-    margin: 0;   
 }
 .nav-bar__item {
-    display: inline-block;
-    height: 15px;
-    margin-right: 30px;
+    font-size: 14px;
 }
 .nav-link {
     color: #FFFFFF;
@@ -59,15 +132,13 @@
     padding:0;
     margin:0;
 }
-
 .nav-link:hover {
     color: #FFFFFF;
     padding-bottom:3px;
     border-bottom:3px solid #FFFFFF;
-} 
+}  */
 
 .section-header {
-    height: 44px;
     margin-top: 40px;
     margin-bottom: 60px;
 }
@@ -80,17 +151,14 @@
 }
 
 .avatar-info-block {
-    height: 244px;
-    width: 205px;
-    margin-right: 121px;
+    text-align: center;
 }
 
 .avatar-info-block__img {
     height: 150px;
     width: 150px;
     border-radius: 50%;
-    margin-left: auto;
-    margin-right: auto;
+    margin:0 auto;
     margin-bottom: 23px;
     background-image: url(img/photo.jpg);
     background-size: cover;
@@ -100,7 +168,6 @@
 .avatar-info-block__text {
     margin: 0;
     padding: 0;
-    height: 15px;
     margin-bottom: 10px;
 }
 
@@ -108,7 +175,6 @@
     display:flex;
     justify-content: center;
     align-items: center;
-    height: 15px;
 }
 .avatar-info-block__location-logo {
     height: 15px;
@@ -137,33 +203,101 @@
     font-weight: bold;
     font-size: 28px;
     margin-bottom: 24px;
-    height: 31px;
+}
+.content-block__img {
+    /* width: 476px; */
+    height: 402px;
+    margin-bottom: 218px;
 }
 
-.content-block {
-    margin-bottom: 50px;
+.content-block ul {
+    padding-left: 20px;
 }
 
-.content-block__info_no-decor {
-    list-style: none;
+.contact-block__header {
+    font-weight: bold;
+    font-size: 28px;
+    margin-bottom: 24px;
 }
 
-.content-block__info_big-font {
+.contact-block__input-label {
+    padding:0;
+    margin-bottom:3px;
+    font-size: 12px;
+    color: #878787; 
+}
+
+.contact-block__input {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.contact-block__input-element {
+    width:100%;
+    border: 1px solid #6C6C6C;
+    box-sizing: border-box;
+    border-radius: 6px;
+    height: 35px;
+}
+
+.contact-block__send {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px; 
+    margin-bottom: 77px;
     font-size: 16px;
+    text-align: center;
+    color: #000000;
+}
+
+.phone-block__city {
+    color: #000000;
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 2px;
+}
+
+.phone-block__contacts {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.phone-block__phone-number {
+    margin: 0px;
+    padding: 0px;
+}
+
+.contact-block__button {
+    background: #293883;
+    border-radius: 6px;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+    margin-left: 20px;
+}
+
+.contact-block__input-element:focus {
+    border-color: #293883;
+    border-radius: 6px;
+    outline: none;
 }
 
 .footer-bar {
-    position: fixed;
-    left: 0;
-    bottom: 0;
     background-color: #7184E8;
-    padding-top: 18px;
+    position: absolute;
+    bottom: 0;
     width: 100%;
 }
 
 .footer-bar__copyrights {
-    height: 15px;
-    margin-bottom: 33px;
+    margin-top: 18px;
+    margin-bottom: 21px;
     color: #FFFFFF;
 }
 
@@ -176,255 +310,7 @@
     text-decoration: underline;
 }
 
-
-/* .navbar-nav {
-    position:relative;   
-}
-
-.navbar-nav li {
-   display:inline-block; 
-   padding:10px;
-   background-color:#ccccdd;
-}
-
-.navbar-nav li > a {
-  text-decoration: none;
-   color:#fff;
-   
-}
-
-.navbar-nav li > a:hover {
-  color: #595959;
-   padding-bottom:5px;
-   border-bottom:10px solid #333;
-}
-
-
-<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-        <li><a class="navitem" href="#">Features</a></li>
-        <li><a class="navitem" href="#">About Us</a></li>
-        <li><a class="navitem" href="#">Contact Us </a></li>
-    </ul>
-</div> */
-/*
-.logo__text{
-    color: #7184E8;
-    font-weight: bold;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.centered {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-}  */
-
-/* .header-bar {
-    background-color: #293883;
-}s
-
-.header-bar-logo-block {
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-
-.header-bar-logo-block__img {
-    height: 55px;
-    width: 53px;
-    background-image: url(img/Logo.png);
-    background-size: cover;
-    background-position: center;
-}
-
-.header-bar-logo-block__text{
-    font-size: 16px;
-    color: #7184E8;
-    font-weight: bold;
-    margin-left: 10px;
-    margin-bottom: 5px;
-    margin-top: 5px;
-}
-
-.header-bar-nav-menu {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-.header-bar-nav__item {
-    float: left;
-}
-.nav-link {
-    color: #FFFFFF;
-    padding: 4px 16px;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: bold;
-}
-
-.nav-link:hover {
-    color: #FFFFFF;
-    border-bottom: 3px white solid 
-} */
-
-/****************************************************/
-/************ Main block Styles ******************/
-/**************************************************/
-/* .about-header {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.about-header__text {
-    font-weight: bold; 
-}
-
-.avatar-info-block__img {
-    height: 250px;
-    width: 250px;
-    border-radius: 50%;
-    margin-bottom: 10px;
-    background-image: url(img/photo.jpg);
-    background-size: cover;
-    background-position: center;
-    margin: 0 auto;
-}
-
-.avatar-info-block__location-info {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
-.avatar-info-block__location-logo {
-    height: 18px;
-    width: 18px;
-    background-image: url(img/location.png);
-    background-size: cover;
-    background-position: center;
-    margin-right: 5px;
-}
-.avatar-info-block__text_dark {
-    color: #000000;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.avatar-info-block__text_light {
-    color: #6C6C6C;
-}
-
-.content-block__header {
-    font-weight: bold;
-}
-
-.contact-block {
-    margin-bottom: 50px;
-}
-
-.contact-block__input {
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.contact-block__header {
-    text-align: left;
-    font-weight: bold;
-}
-
-.contact-block__send {
-    display:flex;
-    justify-content: left;
-    align-items: center;
-    flex-flow: row;
-}
-
-.phone-block__header {
-    text-align: left;
-}
-
-.phone-block__contacts {
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-flow: row;  
-}
-.phone-block__header {
-    font-weight: bold;
-}
-
-.phone-block__city {
-    font-weight: bold;
-    margin: 0;
-}
-
-.phone-block__phone-number {
-    margin: 0;   
-}
-
-.contact-block__input-element {
-    border-radius: 8px;
-    height: 40px;
-    border: 1px solid #6C6C6C;
-    width: 200px;
-}
-
-.contact-block__input-element:focus {
-    border: 2px solid #293883;
-}
-
-.contact-block__input-label {
-    margin: 0;
-    padding: 5px;
-    color: #6C6C6C;
-}
-
 .contact-block__send_underlined {
     color: #293883;
-    text-decoration: underline
+    text-decoration: underline;
 }
-
-.content-block__info {
-    margin-bottom: 20px;
-}
-
-.phone-block {
-    margin-bottom: 20px;
-} */
-/****************************************************/
-/************ Footer block Styles ******************/
-/**************************************************/
-/* .footer-bar {
-    background-color: #7184E8;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.footer-bar-rights-block {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    color: #FFFFFF;
-}
-.footer-bar-rights-block__year {
-    font-weight: bold;
-    margin-right: 5px;
-}
-
-.footer-bar-info-block {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    color: #FFFFFF;
-}
-
-.footer-bar-info-block__link {
-    color: #293883;
-    font-weight: bold;
-    margin-left: 5px;
-} */
