--- a/ex2/public/style.css
+++ b/ex2/public/style.css
@@ -4,6 +4,12 @@
         url('fonts/Graphik-Medium-Cy-Web.woff') format('woff');
 }
 
+@font-face {
+    font-family: 'Graphik-Regular';
+    src:url('fonts/Graphik-Regular-Cy-Web.woff2') format('woff2'),
+        url('fonts/Graphik-Regular-Cy-Web.woff') format('woff');
+}
+
 html {
     height: 100%;
 }
@@ -22,6 +28,12 @@ main {
     flex: 1 0 auto;
 }
 
+.container-fluid {
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-bottom: 77px;
+}
+
 footer {
     background-color: #7184E8;
     font-size: 14px;
@@ -34,6 +46,8 @@ p {
     font-family: 'Graphik';
     font-style: normal;
     font-weight: normal;
+    line-height: initial;
+    font-size: 16px;
 }
 
 h1 {
@@ -67,6 +81,11 @@ li {
     list-style-position:inside;
 }
 
+a, nav {
+    margin: 0;
+    padding: 0;
+}
+
 section {
     padding-bottom: 24px;
 }
@@ -93,6 +112,56 @@ section {
     padding-left: 8px;
 }
 
+.nav-list {
+    margin: 0;
+    padding: 0;
+    padding-top: 41px;
+    padding-bottom: 39px;
+    list-style:none;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding-right: 6px;
+}
+.nav-list-link {
+    padding: 0;
+    margin: 0;
+    position: relative;
+    color: #FFFFFF;
+    font-family: 'Graphik';
+    font-weight: bold;
+    font-style: normal;
+    font-size: 14px;
+    margin-left: 35px;
+}
+  
+.nav-list-link:hover {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+.nav-list-link:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    bottom: 0;
+    left: 0;
+    top: 20px;
+    background-color: #FFFFFF;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+}
+
+.nav-list-link:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+}
+
 .photo {
     padding-left: 97px;
 }
@@ -110,6 +179,7 @@ section {
 }
 
 .photo__name {
+    font-family: 'Graphik';
     font-weight: bold;
     font-size: 20px;
     text-align: center;
@@ -166,214 +236,16 @@ section {
     text-decoration: underline;
 }
 
-.nav-list {
-	/* margin: 0;
-	padding: 0;
-	text-align: right; */
-	/* display: inline-block; */
-    /* vertical-align: middle; */
-    /* padding-top: 41px; */
-}
+/*Content Page---------------------------*/
 
-.nav-list__item {
-	/* display: inline-block;
-	font-size: 16px; */
-}
-
-.nav-link {
-	/* color: #ffffff;
-	text-decoration: none;
-	display: inline-block;	
-	padding: 10px;
-	transition: color 0.5s; */
-}
-/*   
-.nav-bar__item {
-    display: inline;
-    text-align: center;
-}
-
-.nav-link {
-    display: inline-block;
-    width: 25%;
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    color: #FFFFFF;
-    font-weight: bold;
-    text-decoration: none;
-}
-
-.one {
-    margin-right: 35px;
-}
-
-.nav-link:hover {
-    color: #FFFFFF;
-} 
-
-.page_about_one{
-    margin-right: 35px;
-}
-
-.page_contact_one{
-    margin-right: 35px;
-}
-
-.page_contact_one:hover ~ hr {
-    width: 75px;
-    margin-left: 0;
-}
-  
-.page_about_two:hover ~ hr {
-    margin-left: 110px;
-    width: 93px;
-}
-  
-.page_about {
-    height: .25rem;
-    margin-left: 0;
-    margin-top: 0;
-    width: 75px;
-    background: #FFFFFF;
-    border: none;
-    transition: .3s ease-in-out;
-    margin-bottom: 0;
-}
-
-.page_contact {
-    height: .25rem;
-    margin-left: 110px;
-    margin-top: 0;
-    width: 93px;
-    background: #FFFFFF;
-    border: none;
-    transition: .3s ease-in-out;
-    margin-bottom: 0;
-}
-
-.centered {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.header-bar {
-    background-color: #293883;
-    font-family: 'Graphik';
-    font-weight: normal;
-    font-style: normal;
-}
-
-
-
-.navigation-panel {
-    display: table;
-    margin: 0 auto;
-    margin-top: 41px;
-    margin-bottom: 39px;
-}
-
-.nav-bar {
-    margin: 0;
-    padding: 0;
-}
-
-.section-header {
-    margin-top: 40px;
-    margin-bottom: 60px;
-}
-
-.section-header__title {
-    font-weight: bold;
-    font-size: 40px;
-    margin: 0;
-    padding: 0;
-}
-
-.avatar-info-block {
-    text-align: center;
-}
-
-.avatar-info-block__img {
-    height: 150px;
-    width: 150px;
-    border-radius: 50%;
-    margin:0 auto;
-    margin-bottom: 23px;
-    background-image: url(img/photo.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.avatar-info-block__text {
-    margin: 0;
-    padding: 0;
-    margin-bottom: 10px;
-}
-
-.avatar-info-block__location-info {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
-.avatar-info-block__location-logo {
-    height: 15px;
-    width: 15px;
-    background-image: url(img/location.png);
-    background-size: cover;
-    background-position: center;
-    margin-right: 5px;
-}
-.avatar-info-block__text_dark {
-    color: #000000;
-    font-weight: bold;
-    font-size: 20px;
-    height: auto;
-}
-
-.avatar-info-block__text_light {
+label {
+    display:block;
     color: #6C6C6C;
+    width:100%;
 }
 
-.avatar-info-block__text_no-margin {
-    margin:0;
-}
-
-.content-block__header {
-    font-weight: bold;
-    font-size: 28px;
-    margin-bottom: 24px;
-}
-.content-block__img {
-    height: 402px;
-    margin-bottom: 218px;
-}
-
-.content-block ul {
-    padding-left: 20px;
-}
-
-.contact-block__header {
-    font-weight: bold;
-    font-size: 28px;
-    margin-bottom: 24px;
-}
-
-.contact-block__input-label {
-    padding:0;
-    margin-bottom:3px;
-    font-size: 12px;
-    color: #878787; 
-}
-
-.contact-block__input {
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.contact-block__input-element {
+input {
+    margin-top: 3px;
     width:100%;
     border: 1px solid #6C6C6C;
     box-sizing: border-box;
@@ -381,76 +253,167 @@ section {
     height: 35px;
 }
 
-.contact-block__send {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 25px; 
-    margin-bottom: 77px;
-    font-size: 16px;
-    text-align: center;
-    color: #000000;
-}
-
-.phone-block__city {
-    color: #000000;
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 2px;
-}
-
-.phone-block__contacts {
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.phone-block__phone-number {
-    margin: 0px;
-    padding: 0px;
-}
-
-.contact-block__button {
-    background: #293883;
-    border-radius: 6px;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    font-size: 12px;
-    font-weight: bold;
-    margin-left: 20px;
-}
-
-.contact-block__input-element:focus {
+input:focus {
     border-color: #293883;
+    border-width: 2px;
     border-radius: 6px;
     outline: none;
 }
 
-.footer-bar {
-    background-color: #7184E8;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
-
-.footer-bar__copyrights {
-    margin-top: 18px;
-    margin-bottom: 21px;
-    color: #FFFFFF;
-}
-
-.footer-bar__copyrights_bold {
+button {
+    background: #293883;
+    border-radius: 6px;
+    border: none;
+    color: white;
+    padding: 13px 26px 13px 25px;
+    text-align: center;
+    font-size: 12px;
     font-weight: bold;
 }
 
-.footer-bar__copyrights_highlighted {
-    color: #293883;
-    text-decoration: underline;
+iframe {
+    width: 100%;
+    height: 400px;
 }
 
-.contact-block__send_underlined {
-    color: #293883;
-    text-decoration: underline;
-} */
+.workplace {
+    padding-bottom: 226px;
+}
+.workplace__name {
+    font-family: 'Graphik';
+    font-style: normal;
+    font-weight: normal;
+    padding-bottom: 40px;
+    font-size: 16px;
+}
+
+.city {
+    font-family: 'Graphik';
+    font-weight: bold;
+    padding-bottom: 10px;
+}
+
+
+.top-nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    color: #FFF;
+    padding: 0;
+  }
+  
+  .menu {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .menu a{
+    color: #FFFFFF;
+  }
+
+  .menu > li{
+    margin: 0 1rem;
+  }
+  
+  .menu-button-container {
+    display: none;
+    height: 100%;
+    width: 30px;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #menu-toggle {
+    display: none;
+  }
+  
+  .menu-button,
+  .menu-button::before,
+  .menu-button::after {
+    display: block;
+    background-color: #fff;
+    position: absolute;
+    height: 4px;
+    width: 30px;
+    transition: -webkit-transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    border-radius: 2px;
+  }
+  
+  .menu-button::before {
+    content: '';
+    margin-top: -8px;
+  }
+  
+  .menu-button::after {
+    content: '';
+    margin-top: 8px;
+  }
+  
+  #menu-toggle:checked + .menu-button-container .menu-button::before {
+    margin-top: 0px;
+    -webkit-transform: rotate(405deg);
+            transform: rotate(405deg);
+  }
+  
+  #menu-toggle:checked + .menu-button-container .menu-button {
+    background: #293883;
+  }
+  
+  #menu-toggle:checked + .menu-button-container .menu-button::after {
+    margin-top: 0px;
+    -webkit-transform: rotate(-405deg);
+            transform: rotate(-405deg);
+  }
+  
+  @media (max-width: 700px) {
+    .menu-button-container {
+      display: flex;
+    }
+  
+    .menu {
+      position: absolute;
+      top: 0;
+      margin-top: 95px;
+      left: 0;
+      flex-direction: column;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    #menu-toggle ~ .menu li {
+      height: 0;
+      margin: 0;
+      padding: 0;
+      border: 0;
+      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+  
+    #menu-toggle:checked ~ .menu li {
+      height: 2.5em;
+      padding: 0.5em;
+      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+  
+    .menu > li {
+      display: flex;
+      justify-content: center;
+      margin: 0;
+      padding: 0.5em 0;
+      width: 100%;
+      color: white;
+      background-color: #293883;
+    }
+  
+    .menu > li:not(:last-child) {
+      border-bottom: 1px solid #293883;
+    }
+  }
