--- a/ex1/style.css
+++ b/ex1/style.css
@@ -1,20 +1,24 @@
 body {
-  padding-left: 300px;
   background-color: grey;
 }
 .round {
-  width: 200px; 
-  height: 200px;
+  width: 250px; 
+  height: 250px;
   background: red;
-  border: 30px solid white;
+  border: 35px solid white;
   border-radius: 50%;
   position: relative;
+  left: 50%;
+  top: 50%;
+  }
+  .round{
+    transform: translate(-50%, -50%);
   }
   .rectangle {
-    width: 140px;
-    height: 40px;
+    width: 190px;
+    height: 60px;
     background: white;
     position: relative;
-    top: 80px;
+    top: 95px;
     left: 30px;
   }
