--- a/ex1/style.css
+++ b/ex1/style.css
@@ -1,5 +1,9 @@
+html {
+  height: 100%;
+}
 body {
   background-color: grey;
+  height: 100%;
 }
 .round {
   width: 250px; 
@@ -10,9 +14,9 @@ body {
   position: relative;
   left: 50%;
   top: 50%;
-  }
-  .round{
-    transform: translate(-50%, -50%);
+}
+.round{
+  transform: translate(-50%, -50%);
   }
   .rectangle {
     width: 190px;
