--- a/ex1/style.css
+++ b/ex1/style.css
@@ -18,11 +18,13 @@ body {
 .round{
   transform: translate(-50%, -50%);
   }
-  .rectangle {
+ .round::before{
+   content: "";
     width: 190px;
     height: 60px;
     background: white;
     position: relative;
     top: 95px;
     left: 30px;
+    display: block;
   }
